# cRypto

./: Cargo.toml  README.md
src/: main.rs
src/libs/: argon2_lib.rs  ascon_hash_lib.rs  ascon_xof_lib.rs  b58_lib.rs  b64_lib.rs  b85_lib.rs  baloon_hash_lib.rs  bin_lib.rs  builder.rs  cRyptit.rs  errors.rs  hex_lib.rs  mod.rs  salt_gen.rs  scrypt_lib.rs
