[package]
name = "cRypto"
version = "0.3.0"
edition = "2024"

[dependencies]
ascon-hash = "0.3.1"
argon2 = "0.5.3"
hex = "0.4.3"
clap = { version = "4.5.53", features = ["derive"] }
rand = "0.9.2"
thiserror = "2.0.17"
hardware-query = "0.2.1"
sha2 = "0.10.9"
balloon-hash = "0.2.0"
rand_core = { version = "0.6", features = ["std"] }
scrypt = "0.11.0"
base64 = "0.22.1"
base85 = "2.0.0"
bs58 = "0.5.1"
bincode2 = "2.0.1"
